# oephys2nwb

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  conda2pip.py  export2nwb.py  oephys2nwb-dev.yml  oephys2nwb.yml  pyproject.toml  setup.cfg  setup.py
LICENSES/: BSD-3-Clause.txt
oephys2nwb/: __init__.py  __main__.py  export2nwb.py
tests/: script_local.py
