[metadata]
name = esi-oephys2nwb
author = Ernst Strüngmann Institute (ESI) for Neuroscience in Cooperation with Max Planck Society
author_email = it@esi-frankfurt.de
description = Export binary Open Ephys data to NWB 2.x
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
license = BSD-3
license_file = LICENSE
home_page = https://esi-oephys2nwb.readthedocs.io/en/latest/
project_urls =
    Bug Tracker = https://github.com/esi-neuroscience/oephys2nwb/issues
    Documentation = https://esi-oephys2nwb.readthedocs.io/en/latest/
    Source Code = https://github.com/esi-neuroscience/oephys2nwb
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
zip_safe = False
install_requires =
    ndx-events
    pydantic
    pynwb
    # pip @ https://github.com/open-ephys/open-ephys-python-tools

[options.extras_require]
dev=
    ipdb
    ipython
    numpydoc
    sphinx_automodapi
    sphinx_bootstrap_theme

[options.data_files]
oephys2nwb =
    CHANGELOG.md
    CITATION.cff
    LICENSE
    README.md
